[gd_scene load_steps=4 format=3 uid="uid://uyvmwyfyqof7"]

[ext_resource type="Script" path="res://source/scripts/level_island.gd" id="1_mnovf"]
[ext_resource type="Theme" uid="uid://docpmippif7jn" path="res://source/resources/PlayStateText.tres" id="1_vi3uh"]
[ext_resource type="PackedScene" uid="uid://d1dm0gb8pvhv7" path="res://source/star_feed_back.tscn" id="3_ttldc"]

[node name="LevelIsland" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("1_vi3uh")
text = "99"
script = ExtResource("1_mnovf")

[node name="HiScore" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = -9.0
offset_right = 168.0
offset_bottom = 34.0
text = "99,999"
scroll_active = false

[node name="StarFeedBack" parent="." instance=ExtResource("3_ttldc")]
layout_mode = 0
offset_left = 36.0
offset_top = 24.0
offset_right = 786.0
offset_bottom = 237.0
scale = Vector2(0.16, 0.16)
